// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppTitleCard Component Tests Props "header" and "subheader" 1`] = `
<div
  class="v-toolbar__title"
>
  <nuxt-link-stub
    to="/"
  >
    <span
      class="some-class"
      id="Header"
      innertext="This is a heading"
    >
      This is a heading
    </span>
     
    <span
      class="some-other-class"
      id="SubHeader"
      innertext="This is a sub-heading"
    >
      This is a sub-heading
    </span>
  </nuxt-link-stub>
</div>
`;

exports[`AppTitleCard Component Tests base component state, matches snapshot 1`] = `
<div
  class="v-toolbar__title"
>
  <nuxt-link-stub
    to="/"
  >
    <span
      class=""
      id="Header"
      innertext=""
    >
      
    </span>
     
    <span
      class=""
      id="SubHeader"
      innertext=""
    >
      
    </span>
  </nuxt-link-stub>
</div>
`;
